<resources>
    <string name="app_name">JobDebugStation</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome_to_sleep">Welcome to Sleep</string>
    <string name="explore_the_new_king_of_sleep">Explore the new king of sleep. It uses sound and visualization to create perfect conditions for refreshing sleep.</string>
    <string name="soothing_bedtime_stories">Soothing bedtime stories to help you fall into a deep and neutral sleep</string>
    <string name="sleep_stories">Sleep Stories</string>
    <string name="sleep_music">SLEEP MUSIC</string>
    <string name="ease_the_mind">Ease the mind into a restful night sleep with these deep, amblent tones.</string>
    <string name="_45_min_sleep_music">45 MIN   •   SLEEP MUSIC</string>
    <string name="_24_234_favorites">24,234 Favorites</string>
    <string name="_34_234_listening">34,234 Listening</string>
    <string name="related">Related</string>
    <string name="play">PLAY</string>
    <string name="night_island">Night Island</string>
    <string name="sweet_sleep">Sweet Sleep</string>
    <string name="good_night">Good Night</string>
    <string name="moon_clouds">Moon Clouds</string>
</resources>