<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#021545">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/titleImageView"
        android:src="@drawable/night_island_large"
        android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/image_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/image_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="35dp"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/image_love"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="35dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/night_island"
        android:id="@+id/textMusicName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleImageView"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="34sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_45_min_sleep_music"
        android:textColor="@color/grey"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:id="@+id/textSleepMusic"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/textMusicName"
        app:layout_constraintTop_toBottomOf="@id/textMusicName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ease_the_mind"
        android:textColor="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="15sp"
        android:id="@+id/textDescription"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/textMusicName"
        app:layout_constraintTop_toBottomOf="@id/textSleepMusic"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/fav_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        android:text="@string/_24_234_favorites"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="46dp"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ear_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_34_234_listening"
        android:id="@+id/textListening"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginStart="138dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.125dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textListening"
        android:background="#98A1BD"
        android:id="@+id/lineView"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/related"
            android:id="@+id/textRelated"
            android:textSize="25sp"
            android:layout_marginTop="9dp"
            android:textColor="@color/white"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_below="@id/textRelated"
            android:layout_above="@id/playButtonBeforePlay"
            android:layout_marginBottom="5dp"
            android:id="@+id/recBeforePlayRelated"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:id="@+id/playButtonBeforePlay"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>